2006-05-31  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* buildscripts/output-distance.py (ComparisonData.compare_trees):
	fixes. Don't follow symlinks.
	(ComparisonData.create_html_result_page): remove previous results.
	insert ../python in path.

	* scripts/lilypond-book.py (PREAMBLE_LY): spacing fixes.

2006-05-31  Jan Nieuwenhuizen  <janneke@gnu.org>

	* config.make.in (datadir): Add datarootdir to silence autoconf.

	* stepmake/aclocal.m4: Update for autoconf-2.59d.

2006-05-31  Erlend Aasland  <erlenda@gmail.com>

	* dynamic-engraver.cc: fix bug (dynamics collide with accidentals)

	* scm/output-ps.scm (repeat-slash): fix a bug that made repeat slash beams
	too wide.

2006-05-30  Jan Nieuwenhuizen  <janneke@gnu.org>

	* lily/relocate.cc (read_relocation_dir): Do not blindly
	dereference DIR.

2006-05-30  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* lily/parser.yy: replace THIS by PARSER

	* Documentation/index.html.in: add link to test-results.html page.

	* Documentation/topdocs/NEWS.tely (Top): update NEWS entry.

	* scm/translation-functions.scm (format-bass-figure): translate
	digits over 10 to the left

	* scm/define-markup-commands.scm (translate-scaled): new markup.

	* mf/feta-nummer-code.mf (code): overshoot the topright tip of the
	7 glyph. 

	* ly/engraver-init.ly: add Figured_bass_engraver

	* lily/engraver-group.cc (acknowledge_grobs): use start/stop drul.

	* lily/figured-bass-engraver.cc (clear_spanners): use everywhere.

	* lily/score-engraver.cc (announce_grob): only note START announces.

	* lily/include/engraver-group.hh (Translator_group):
	acknowledge_hash_table_ is now drul.

	* lily/engraver.cc (announce_end_grob): new method.

	* lily/include/grob-info.hh (class Grob_info): add start_end_ member.

	* lily/translator-dispatch-list.cc (create): take start_end argument.

	* lily/include/translator.hh (TRANSLATOR_DECLARATIONS): change
	acknowledge_static_array_ to drul

	* lily/include/translator.icc (ADD_END_ACKNOWLEDGER): new macro.
