@@ -1,5 +1,7 @@
 2006-05-31  Han-Wen Nienhuys  <hanwen@lilypond.org>
 
+	* GNUmakefile.in: simplify local-WWW-post. 
+
 	* buildscripts/output-distance.py (ComparisonData.compare_trees):
 	fixes. Don't follow symlinks.
 	(ComparisonData.create_html_result_page): remove previous results.
